fix button on safari

--- a/app/sass/_content.sass
+++ b/app/sass/_content.sass
@@ -235,7 +235,7 @@
   button
     position: relative
     width: 29px
-    height: 21px
+    //height: 21px
     margin: 0 0 0 20px
     padding: 0
     border-radius: 0
